--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,8 +45,8 @@ jobs:
           python-version: ${{ matrix.py-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements_dev.txt
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements_dev.txt
       - name: Install gnu make on macos
         if: startsWith(matrix.os, 'macos')
         run: |
